# IM

./: .gitignore  0.tif  135.tif  45.tif  90.tif  CMakeLists.txt  GaussNoise.cpp  GaussNoise.h  algorithmproxy.hpp  algorithms.cpp  algorithms.hpp  basealgorithm.cpp  basealgorithm.hpp  main.cpp  mask.cpp  mask.hpp  simplealgorithm.cpp  simplealgorithm.hpp
